[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/AKIRA EXPANDED DEMO.OTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=2]
[ext_resource path="res://Main Game.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 185
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 139
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.54902 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main Menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
mainGameScene = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0980392, 0.109804, 0.364706, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 200
custom_constants/margin_top = 75
custom_constants/margin_left = 200
custom_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 200.0
margin_top = 75.0
margin_right = 1720.0
margin_bottom = 930.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1520.0
margin_bottom = 327.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Geoblast"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 331.0
margin_right = 1520.0
margin_bottom = 855.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 43

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1520.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="PlayB" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 100.0
margin_right = 1420.0
margin_bottom = 146.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Play"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 1520.0
margin_bottom = 335.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="OptionsB" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 100.0
margin_right = 1420.0
margin_bottom = 146.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Options"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 378.0
margin_right = 1520.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="ExitB" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 100.0
margin_right = 1420.0
margin_bottom = 146.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "exit"

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/PlayB" to="." method="_on_PlayB_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/OptionsB" to="." method="_on_OptionsB_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/ExitB" to="." method="_on_ExitB_button_up"]
